--- a/Users/User.xaml
+++ b/Users/User.xaml
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <Window
     x:Class="EMRMS.Users.User"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:EMRMS.Users"
+    xmlns:local1="using:EMRMS.Utilities.PostAndComments"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    >
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -14,50 +15,155 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.3*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto"/>
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Grid.ColumnSpan="2">
+
+        <!-- Primer Grid -->
+        <Grid 
+            Height="112"
+            Width="645"
+            Grid.Row="0" 
+            Grid.ColumnSpan="2">
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition Height="0.5*" />
-                <RowDefinition Height="0.6*" />
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="0.8*" />
-                <ColumnDefinition Width="0.7*" />
+                <ColumnDefinition Width="0.5*"/>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="0.4*" />
             </Grid.ColumnDefinitions>
+
             <AutoSuggestBox
                 x:Name="AutoSuggestBox"
-                Grid.Row="1"
-                Grid.Column="0"
-                Margin="15,0,0,0"
+                PlaceholderText="Search an user"
+                Grid.Row="0"
+                Grid.Column="1"
+                Margin="15,25,0,0"
                 AutomationProperties.Name="Basic"
                 QueryIcon="Find"
                 QuerySubmitted="AutoSuggestBox_QuerySubmitted"
                 SuggestionChosen="AutoSuggestBox_SuggestionChosen"
                 TextChanged="AutoSuggestBox_TextChanged" />
             <TextBlock
-                Grid.Row="1"
+                x:Name="txtNickname"
                 Grid.RowSpan="2"
-                Grid.Column="1"
-                Margin="15,0,0,0"
-                FontSize="24">
-                <Bold>Lionel Messi</Bold>
-            </TextBlock>
-
-
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="15,15,0,0"
+                FontSize="24"
+                FontWeight="Bold"
+                Text="Lionel Messi" />
             <Button
-                Grid.RowSpan="3"
+                Grid.RowSpan="2"
                 Grid.Column="2"
-                Margin="5,10,10,0"
+                Margin="5,0,10,0"
                 HorizontalAlignment="Right"
                 Background="Transparent"
                 BorderBrush="Transparent"
-                Click="Button_Click">
-                <PersonPicture x:Name="picAvatar" DisplayName="Jane Doe" />
+                Click="Avatar_Click">
+                <PersonPicture x:Name="picAvatar" DisplayName="" />
             </Button>
         </Grid>
+
+        <!-- Segundo Grid -->
+        <Grid Grid.Row="1" Grid.ColumnSpan="2" Height="100" Margin="0,10,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <RelativePanel 
+                Height="100"
+                HorizontalAlignment="Stretch" 
+                VerticalAlignment="Stretch">
+                <RelativePanel.Resources>
+                    <Style TargetType="Button">
+                        <Setter Property="BorderThickness" Value="0" />
+                        <Setter Property="Background" Value="Transparent"/>
+                        <Setter Property="Margin" Value="0,0,8,0" />
+                    </Style>
+                </RelativePanel.Resources>
+
+                <Button x:Name="openMultimediaButton" 
+                        AutomationProperties.Name="Open file" 
+                        ToolTipService.ToolTip="Open Multimedia"
+                        RelativePanel.AlignRightWithPanel="True"
+                        RelativePanel.AlignTopWithPanel="True"
+                        Click="openMultimediaButton_Click"  >
+                    <Button.Content>
+                        <FontIcon Glyph="&#xE7C5;" />
+                    </Button.Content>
+                </Button>
+                <Button x:Name="sendButton" 
+                        Click="sendButton_Click"
+                        AutomationProperties.Name="Open file" 
+                        ToolTipService.ToolTip="Open File"
+                        RelativePanel.AlignRightWithPanel="True"
+                        RelativePanel.AlignBottomWithPanel="True">
+                    <Button.Content>
+                        <FontIcon Glyph="&#xE724;" />
+                    </Button.Content>
+                </Button>
+
+                <RichEditBox x:Name="post" 
+                     RelativePanel.AlignTopWith="openMultimediaButton"
+                     RelativePanel.LeftOf="openMultimediaButton"
+                     RelativePanel.AlignLeftWithPanel="True" 
+                     RelativePanel.AlignBottomWithPanel="True" 
+                     HorizontalAlignment="Stretch" 
+                     VerticalAlignment="Stretch"
+                     Margin="10,0,0,0"/>
+            </RelativePanel>
+
+            <ScrollViewer HorizontalScrollBarVisibility="Auto" Grid.Column="1">
+                <ItemsControl x:Name="ImageGallery" ItemsSource="{x:Bind ImageSources}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapGrid Orientation="Horizontal" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+
+                                <Image Width="100" Height="100" Stretch="Uniform" Source="{Binding Path}" />
+                                <Button 
+                    Background="Transparent" 
+                    BorderBrush="Transparent" 
+                    Click="btnCmdSlider" 
+                    VerticalAlignment="Center" 
+                    HorizontalAlignment="Center">
+                                    <FontIcon Glyph="{Binding FileTypeGlyph}" />
+                                </Button>
+
+                                <Button 
+                    Background="Transparent" 
+                    BorderBrush="Transparent" 
+                    Click="btnDelete" 
+                    VerticalAlignment="Top" 
+                    HorizontalAlignment="Right">
+                                    <FontIcon Glyph="&#xE74D;" />
+                                </Button>
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+
+
+            </ScrollViewer>
+
+
+
+        </Grid>
+        
+        <ScrollViewer Grid.Row="2" Grid.ColumnSpan="2"  Margin="0,15,0,0">
+            <StackPanel x:Name="stackPosts" Margin="20">
+                
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Window>
