--- a/Utilities/PostAndComments/postTemplate.xaml
+++ b/Utilities/PostAndComments/postTemplate.xaml
@@ -25,6 +25,7 @@
                    ></TextBlock>
             <Button 
         x:Name="btnPostDelete"
+                Click="btnPostDelete_Click"
             Background="Transparent"
             RelativePanel.AlignRightWithPanel="True"
             RelativePanel.Below="txtDateTime"
@@ -35,6 +36,7 @@
             <Button 
             x:Name="btnEdit"
             Background="Transparent"
+                Click="btnEdit_Click"
             RelativePanel.LeftOf="btnPostDelete"
         RelativePanel.Below="txtDateTime"
             Margin="5"
@@ -53,13 +55,15 @@
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Grid>
-                                <Image Width="100" Height="100"  Stretch="UniformToFill" Source="{Binding Path}" Margin="5"
+                                <Image Width="100" Height="100"  Stretch="UniformToFill" 
+                                       Source="{Binding Path}" Margin="5"
                                        />
                                 
                                 <Button 
                                     Background="Transparent" 
                                     BorderBrush="Transparent" 
                                     Click="btnFullScreenOrFtp_Click"
+                                    
                                     VerticalAlignment="Top" 
                                     HorizontalAlignment="Right"
                                     Visibility="{Binding visibilityBtnFullScreenImage}">
