--- a/Utilities/Videos/VideoHelper.xaml
+++ b/Utilities/Videos/VideoHelper.xaml
@@ -6,12 +6,16 @@
     xmlns:local="using:EMRMS.Utilities.Videos"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+
+    mc:Ignorable="d"
+    Title="WinUI MediaPlayer Example">
 
     <Grid>
-        <MediaPlayerElement 
-                    x:Name="mediaPlayerElement"
-                    AutoPlay="False"
-                    AreTransportControlsEnabled="True" />
+        <WebView2
+            x:Name="webViewer" HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            IsRightTapEnabled="False"
+            CoreWebView2Initialized="webViewer_CoreWebView2Initialized"
+            ></WebView2>
     </Grid>
 </Window>
